<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    android:orientation="vertical"
    android:background="@drawable/back">

    <Button
        android:id="@+id/btn_menusekolah"
        style="@style/DashboardButton"
        android:layout_above="@+id/btn_tentang"
        android:layout_alignLeft="@+id/btn_tentang"
        android:layout_marginBottom="31dp"
        android:drawableTop="@drawable/infos"
        android:text="@string/sekolah" />

    <Button
        android:id="@+id/btn_peta"
        style="@style/DashboardButton"
        android:layout_alignBaseline="@+id/btn_menusekolah"
        android:layout_alignBottom="@+id/btn_menusekolah"
        android:layout_alignParentRight="true"
        android:layout_marginRight="41sp"
        android:drawableTop="@drawable/peta"
        android:text="@string/peta" />


    <Button
        android:id="@+id/btn_tentang"
        style="@style/DashboardButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="129dp"
        android:layout_marginLeft="35dp"
        android:drawableTop="@drawable/bantuan"
        android:text="@string/tentang" />

    <Button
        android:id="@+id/btn_keluar"
        style="@style/DashboardButton"
        android:layout_alignBaseline="@+id/btn_tentang"
        android:layout_alignBottom="@+id/btn_tentang"
        android:layout_alignLeft="@+id/btn_peta"
        android:drawableTop="@drawable/keluar"
        android:text="@string/keluar" />

</RelativeLayout>